<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="5dp">
    <RelativeLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/_1"
            android:id="@+id/textviewdanhsachindex"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/textviewtenbaihat"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/ten_bai_hat"
            android:layout_toEndOf="@id/textviewdanhsachindex"
            android:singleLine="true"
            android:ellipsize="end"
            android:maxWidth="250dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
             android:textSize="20sp"
            android:layout_toEndOf="@+id/textviewdanhsachindex"
            android:layout_below="@id/textviewtenbaihat"
            android:id="@+id/textviewtencasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ca_si"
            android:ellipsize="end" />
        <ImageView
            android:src="@drawable/love"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/imageviewluotthich"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/todo" />

        </RelativeLayout>
</androidx.cardview.widget.CardView>