<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_marginLeft="30dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/framentlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

     <ImageView
         android:scaleType="centerCrop"
         android:id="@+id/imageviewdanhsachcacalbum"
         android:src="@drawable/ic_launcher_background"
         android:layout_width="160dp"
         android:layout_height="160dp"
         android:contentDescription="@string/todo">
     </ImageView>

    </FrameLayout>

    <TextView
        android:id="@+id/textviewtendanhsachcacalbum"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:ellipsize="end"
        android:gravity="start"
        android:lines="2"
        android:maxWidth="160dp"
        android:maxLines="2"
        android:text="@string/album_hay_nhat_viet_vd"
        android:textColor="#060606"
        android:textSize="15sp"></TextView>
    <TextView
        android:id="@+id/textviewtencasialbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/son_tung_mtp"
        android:textSize="13sp">

    </TextView>

</LinearLayout>