<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/textViewPlayNhacIndex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/_1"
        android:textColor="#ffff"
        android:textSize="17sp">
    </TextView>
    <TextView
        android:id="@+id/textViewPlayNhacTenBaiHat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/textViewPlayNhacIndex"
        android:maxWidth="250dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/ten_ca_khuc"
        android:textSize="17sp"
        android:textColor="#ffff">
    </TextView>
    <TextView
        android:id="@+id/textViewPlayNhacTenCaSi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewPlayNhacTenBaiHat"
        android:ellipsize="end"
        android:singleLine="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/textViewPlayNhacIndex"
        android:textSize="12sp"
        android:textColor="#ffff"
        android:text="@string/ca_si">
    </TextView>
</RelativeLayout>