<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/imageviewBaihathot"
        android:scaleType="fitXY"
        android:layout_margin="3dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/todo" />
    <TextView
        android:text="@string/ten_bai_hat"
        android:textSize="18sp"
        android:textColor="#363636"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_toEndOf="@id/imageviewBaihathot"
        android:layout_marginTop="7dp"
        android:layout_marginStart="5dp"
        android:id="@+id/texviewtenbaihathot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="RelativeOverlap" />
    <TextView
        android:textColor="#8c8a8a"
        android:textSize="18sp"
        android:text="@string/ca_si"
        android:singleLine="true"
        android:layout_toEndOf="@id/imageviewBaihathot"
        android:layout_marginTop="7dp"
        android:layout_marginStart="5dp"
        android:layout_below="@id/texviewtenbaihathot"
        android:id="@+id/texviewcasibaihathot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imageviewluotthich"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="false"
        android:contentDescription="@string/todo"
        android:src="@drawable/iconlove" />
</RelativeLayout>
